rust/ffi/zerobus.h

/**
 * A single header key-value pair for C FFI
 */
typedef struct CHeader {
  char *key;
  char *value;
} CHeader;
/**
 * A collection of headers returned from Go callback
 */
typedef struct CHeaders {
  struct CHeader *headers;
  uintptr_t count;
  char *error_message;
} CHeaders;
/**
 * Opaque handle for an Arrow Flight stream.
 */
typedef struct CArrowStream {
  uint8_t _private[0];
} CArrowStream;
typedef struct CZerobusSdk {
  uint8_t _private[0];
} CZerobusSdk;
/**
 * Configuration options for Arrow Flight streams.
 *
 * `ipc_compression`: -1 = None, 0 = LZ4_FRAME, 1 = ZSTD
 */
typedef struct CArrowStreamConfigurationOptions {
  uintptr_t max_inflight_batches;
  bool recovery;
  uint64_t recovery_timeout_ms;
  uint64_t recovery_backoff_ms;
  uint32_t recovery_retries;
  uint64_t server_lack_of_ack_timeout_ms;
  uint64_t flush_timeout_ms;
  uint64_t connection_timeout_ms;
  /**
   * -1 = None, 0 = LZ4_FRAME, 1 = ZSTD
   */
  int32_t ipc_compression;
  /**
   * Maximum time in milliseconds to wait during graceful stream close.
   * -1 = None (wait full server duration), 0 = immediate recovery, >0 = wait up to min(this, server_duration).
   */
  int64_t stream_paused_max_wait_time_ms;
} CArrowStreamConfigurationOptions;
typedef struct CResult {
  bool success;
  char *error_message;
  bool is_retryable;
} CResult;
/**
 * Function pointer type for the headers provider callback
 * The callback should return a CHeaders struct
 * The caller is responsible for freeing the returned CHeaders using zerobus_free_headers
 */
typedef struct CHeaders (*HeadersProviderCallback)(void *user_data);
/**
 * Opaque handle for an SDK builder. Allocated by `_new`, consumed by
 * `_build`, or dropped by `_free`. Must not be used after either finalizer.
 */
typedef struct CZerobusSdkBuilder {
  uint8_t _private[0];
} CZerobusSdkBuilder;
typedef struct CZerobusStream {
  uint8_t _private[0];
} CZerobusStream;
typedef struct CStreamConfigurationOptions {
  uintptr_t max_inflight_requests;
  bool recovery;
  uint64_t recovery_timeout_ms;
  uint64_t recovery_backoff_ms;
  uint32_t recovery_retries;
  uint64_t server_lack_of_ack_timeout_ms;
  uint64_t flush_timeout_ms;
  int32_t record_type;
  uint64_t stream_paused_max_wait_time_ms;
  bool has_stream_paused_max_wait_time_ms;
  uint64_t callback_max_wait_time_ms;
  bool has_callback_max_wait_time_ms;
  /**
   * Optional ack callback. When either pointer is non-null, acks/errors are
   * delivered asynchronously instead of only via wait_for_offset / flush.
   * Fired serialized on a background task, so keep them lightweight;
   * ack_user_data and shared state need their own sync.
   * ack_on_ack: once per record, in order; monotonic (offset N => all <= N).
   * ack_on_error: relays core error text as-is; may also surface from ingest / flush.
   * A synchronously running callback can outlive close() (abort only cancels
   * at an await), so keep both pointers and ack_user_data alive until the
   * callback object is destroyed, not merely until close() returns.
   * error_message is valid only during the call (copy to keep). Callbacks must
   * not unwind across the C boundary (panics are contained and logged).
   */
  void (*ack_on_ack)(int64_t offset_id, void *user_data);
  void (*ack_on_error)(int64_t offset_id, const char *error_message, void *user_data);
  void *ack_user_data;
} CStreamConfigurationOptions;
/**
 * Function pointer type for async stream creation completion.
 *
 * `stream` is non-null on success and null on failure. `result` points to a
 * `CResult` valid only for the duration of the call; copy any error text during
 * the callback if you need to retain it.
 *
 * Invoked from a background task, so it must be thread-safe and must not
 * unwind across the FFI boundary.
 */
typedef void (*CreateStreamAsyncCallback)(struct CZerobusStream *stream,
                                          const struct CResult *result,
                                          void *user_data);
/**
 * Function pointer type for async offset-returning operations.
 *
 * `result` points to a `CResult` valid only for the duration of the call; copy
 * any error text during the callback if you need to retain it.
 */
typedef void (*OffsetAsyncCallback)(int64_t offset, const struct CResult *result, void *user_data);
/**
 * Function pointer type for async bool-returning operations.
 *
 * `result` points to a `CResult` valid only for the duration of the call; copy
 * any error text during the callback if you need to retain it.
 */
typedef void (*BoolAsyncCallback)(bool value, const struct CResult *result, void *user_data);
/**
 * Represents a single record (either Proto or JSON)
 */
typedef struct CRecord {
  bool is_json;
  uint8_t *data;
  uintptr_t data_len;
} CRecord;
/**
 * Represents an array of records
 */
typedef struct CRecordArray {
  struct CRecord *records;
  uintptr_t len;
} CRecordArray;
/**
 * Function pointer type for async `CRecordArray`-returning operations.
 *
 * On success, ownership of `records` transfers to the callback recipient, who
 * must free it with `zerobus_free_record_array`. `result` points to a `CResult`
 * valid only for the duration of the call; copy any error text during the
 * callback if you need to retain it.
 */
typedef void (*RecordArrayAsyncCallback)(struct CRecordArray records,
                                         const struct CResult *result,
                                         void *user_data);
/**
 * Allocate a zeroed `CHeader` array of `count` elements for a headers callback
 * to populate and return in a `CHeaders`.
 *
 * Uses the same allocator `zerobus_free_headers` frees with (`libc::calloc` /
 * `libc::free`), keeping the alloc/free pair on one heap — needed on Windows,
 * where the caller and this static library can resolve to different CRT heaps.
 * Zero-initialised so a partially populated array is safe to free (unset
 * pointers are null and skipped). Returns null if `count` is 0 or alloc fails.
 */
struct CHeader *zerobus_alloc_header_array(uintptr_t count);
/**
 * Duplicate `len` bytes from `data` into a NUL-terminated C string for a
 * headers callback to store in a `CHeader` key/value or `CHeaders`
 * error_message.
 *
 * Allocated as a Rust `CString`, matching the `CString::from_raw` that
 * `zerobus_free_headers` frees it with (see `zerobus_alloc_header_array` for
 * why same-allocator matters). `len` of 0 yields an empty string. Returns null
 * on alloc failure or if the input has an interior NUL byte.
 */
char *zerobus_alloc_cstring(const uint8_t *data, uintptr_t len);
/**
 * Free headers returned from callback
 */
void zerobus_free_headers(struct CHeaders headers);
/**
 * Creates an Arrow Flight stream with a custom headers provider callback.
 *
 * `schema_ipc_bytes` must point to Arrow IPC stream bytes encoding only the schema.
 *
 * Ownership of `user_data` / `free_user_data` follows
 * `zerobus_sdk_create_stream_with_headers_provider` — once called the FFI owns
 * `user_data` and invokes `free_user_data` exactly once on every path (on
 * success after any in-flight `get_headers` returns; on failure before
 * returning null). The caller must never free `user_data` itself.
 */
struct CArrowStream *zerobus_sdk_create_arrow_stream_with_headers_provider(struct CZerobusSdk *sdk,
                                                                           const char *table_name,
                                                                           const uint8_t *schema_ipc_bytes,
                                                                           uintptr_t schema_ipc_len,
                                                                           HeadersProviderCallback headers_callback,
                                                                           void *user_data,
                                                                           void (*free_user_data)(void *user_data),
                                                                           const struct CArrowStreamConfigurationOptions *options,
                                                                           struct CResult *result);
/**
 * Allocates a new SDK builder. Must be terminated by exactly one of
 * `_build` or `_free`.
 */
struct CZerobusSdkBuilder *zerobus_sdk_builder_new(void);
/**
 * Sets the Zerobus gRPC endpoint URL (required). No-op on null.
 */
void zerobus_sdk_builder_endpoint(struct CZerobusSdkBuilder *builder, const char *value);
/**
 * Sets the Unity Catalog URL. Optional with a custom headers provider.
 * No-op on null.
 */
void zerobus_sdk_builder_unity_catalog_url(struct CZerobusSdkBuilder *builder, const char *value);
/**
 * Overrides the SDK prefix of the `user-agent` header (default
 * `zerobus-sdk-rs/<version>`). Wrappers pass their own identifier here.
 * Null and empty values are no-ops.
 */
void zerobus_sdk_builder_sdk_identifier(struct CZerobusSdkBuilder *builder, const char *value);
/**
 * Appends an application identifier to the `user-agent` header. Wire value
 * becomes `<sdk_identifier> <application_name>`. Null and empty values are
 * no-ops.
 */
void zerobus_sdk_builder_application_name(struct CZerobusSdkBuilder *builder, const char *value);
/**
 * Selects a no-TLS gRPC channel. TLS is on by default.
 */
void zerobus_sdk_builder_disable_tls(struct CZerobusSdkBuilder *builder);
/**
 * Consumes the builder and returns a `CZerobusSdk*`, or NULL on error.
 * Frees the builder on both paths — any further use of the pointer is
 * undefined behavior. Null `builder` writes an error to `result`.
 */
struct CZerobusSdk *zerobus_sdk_builder_build(struct CZerobusSdkBuilder *builder,
                                              struct CResult *result);
/**
 * Drops an unconsumed builder. No-op on null.
 */
void zerobus_sdk_builder_free(struct CZerobusSdkBuilder *builder);
/**
 * Create a stream with a custom headers provider callback
 * This allows you to provide custom authentication headers via a Go/C callback function.
 *
 * Ownership: once this function is called, the FFI owns `user_data`. When
 * `free_user_data` is set it is invoked exactly once, on every path:
 * - on success, when the last internal reference to the provider drops — after
 *   any in-flight `get_headers` callback has returned (this is what closes the
 *   recovery-vs-teardown use-after-free);
 * - on failure (this call returns null), before returning.
 *
 * The caller must therefore hand ownership across and never free `user_data`
 * itself, not even when create fails. Pass a null `free_user_data` to opt out
 * (the caller then owns `user_data` and must keep it alive for the stream's
 * whole lifetime, including in-flight recovery callbacks).
 *
 * `free_user_data` may run on an internal SDK thread, so it must be safe to
 * call from any thread.
 */
struct CZerobusStream *zerobus_sdk_create_stream_with_headers_provider(struct CZerobusSdk *sdk,
                                                                       const char *table_name,
                                                                       const uint8_t *descriptor_proto_bytes,
                                                                       uintptr_t descriptor_proto_len,
                                                                       HeadersProviderCallback headers_callback,
                                                                       void *user_data,
                                                                       void (*free_user_data)(void *user_data),
                                                                       const struct CStreamConfigurationOptions *options,
                                                                       struct CResult *result);
/**
 * Create a stream with a custom headers provider callback on a background task.
 *
 * Returns `true` once the request has been validated and scheduled. The
 * callback is invoked exactly once with either a non-null stream pointer and a
 * success result, or a null stream pointer and a failure result. The SDK
 * handle must remain valid until the callback runs.
 *
 * Ownership follows the synchronous `zerobus_sdk_create_stream_with_headers_provider`:
 * once this function is called, the FFI owns `user_data`. When `free_user_data`
 * is set it is invoked exactly once, on every path:
 * - on a synchronous scheduling failure (this call returns false), before returning;
 * - on an asynchronous creation failure, when the provider drops in the spawned
 *   task before the completion callback fires with the error;
 * - on success, when the last internal reference to the provider drops — after
 *   any in-flight `get_headers` callback has returned (closing the
 *   recovery-vs-teardown use-after-free).
 *
 * The caller must therefore hand ownership across and never free `user_data`
 * itself, not even when creation fails. Pass a null `free_user_data` to opt out
 * (the caller then owns `user_data` and must keep it alive for the stream's
 * whole lifetime, including in-flight recovery callbacks).
 *
 * `free_user_data` may run on an internal SDK thread, so it must be safe to
 * call from any thread.
 */
bool zerobus_sdk_create_stream_with_headers_provider_async(struct CZerobusSdk *sdk,
                                                           const char *table_name,
                                                           const uint8_t *descriptor_proto_bytes,
                                                           uintptr_t descriptor_proto_len,
                                                           HeadersProviderCallback headers_callback,
                                                           void *user_data,
                                                           void (*free_user_data)(void *user_data),
                                                           const struct CStreamConfigurationOptions *options,
                                                           CreateStreamAsyncCallback callback,
                                                           void *callback_user_data,
                                                           struct CResult *result);
/**
 * Ingest a batch of JSON records on a background task and report the last offset via callback.
 */
bool zerobus_stream_ingest_json_records_async(struct CZerobusStream *stream,
                                              const char *const *json_records,
                                              uintptr_t num_records,
                                              OffsetAsyncCallback callback,
                                              void *user_data,
                                              struct CResult *result);
/**
 * Wait for a specific offset to be acknowledged by the server
 */
bool zerobus_stream_wait_for_offset(struct CZerobusStream *stream,
                                    int64_t offset,
                                    struct CResult *result);
/**
 * Wait for an offset on a background task and report completion via callback.
 */
bool zerobus_stream_wait_for_offset_async(struct CZerobusStream *stream,
                                          int64_t offset,
                                          BoolAsyncCallback callback,
                                          void *user_data,
                                          struct CResult *result);
/**
 * Flush all pending records
 */
bool zerobus_stream_flush(struct CZerobusStream *stream, struct CResult *result);
/**
 * Flush all pending records on a background task and report completion via callback.
 */
bool zerobus_stream_flush_async(struct CZerobusStream *stream,
                                BoolAsyncCallback callback,
                                void *user_data,
                                struct CResult *result);
/**
 * Get unacknowledged records from a closed stream
 * Returns a CRecordArray that must be freed with zerobus_free_record_array
 */
struct CRecordArray zerobus_stream_get_unacked_records(struct CZerobusStream *stream,
                                                       struct CResult *result);
/**
 * Get unacknowledged records from a closed stream on a background task.
 */
bool zerobus_stream_get_unacked_records_async(struct CZerobusStream *stream,
                                              RecordArrayAsyncCallback callback,
                                              void *user_data,
                                              struct CResult *result);
/**
 * Free a CRecordArray returned by zerobus_stream_get_unacked_records
 */
void zerobus_free_record_array(struct CRecordArray array);
/**
 * Close the stream gracefully
 */
bool zerobus_stream_close(struct CZerobusStream *stream, struct CResult *result);
/**
 * Close the stream gracefully on a background task.
 */
bool zerobus_stream_close_async(struct CZerobusStream *stream,
                                BoolAsyncCallback callback,
                                void *user_data,
                                struct CResult *result);
/**
 * Free error message string
 */
void zerobus_free_error_message(char *message);
/**
 * Get default stream configuration options
 */
struct CStreamConfigurationOptions zerobus_get_default_config(void);