dotnet/src/Zerobus/Native/NativeBindings.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_stream_ingest_json_records_async")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static extern unsafe bool StreamIngestJsonRecordsAsync(
        IntPtr stream,
        byte** jsonRecords,
        nuint numRecords,
        OffsetAsyncCallback callback,
        IntPtr userData,
        ref CResult result);

    // --- Acknowledgment / flush ---

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_stream_wait_for_offset")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static extern bool StreamWaitForOffset(
        IntPtr stream,
        long offset,
        ref CResult result);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_stream_wait_for_offset_async")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static extern bool StreamWaitForOffsetAsync(
        IntPtr stream,
        long offset,
        BoolAsyncCallback callback,
        IntPtr userData,
        ref CResult result);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_stream_flush")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static extern bool StreamFlush(IntPtr stream, ref CResult result);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_stream_flush_async")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static extern bool StreamFlushAsync(
        IntPtr stream,
        BoolAsyncCallback callback,
        IntPtr userData,
        ref CResult result);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_stream_get_unacked_records")]
    public static extern CRecordArray StreamGetUnackedRecords(IntPtr stream, ref CResult result);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_stream_get_unacked_records_async")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static extern bool StreamGetUnackedRecordsAsync(
        IntPtr stream,
        RecordArrayAsyncCallback callback,
        IntPtr userData,
        ref CResult result);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_free_record_array")]
    public static extern void FreeRecordArray(CRecordArray array);

    // --- Stream close ---

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_stream_close")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static extern bool StreamClose(IntPtr stream, ref CResult result);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_stream_close_async")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static extern bool StreamCloseAsync(
        IntPtr stream,
        BoolAsyncCallback callback,
        IntPtr userData,
        ref CResult result);

    // --- Memory management ---

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_free_error_message")]
    public static extern void FreeErrorMessage(IntPtr message);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_alloc_header_array")]
    public static extern IntPtr AllocHeaderArray(nuint count);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_alloc_cstring")]
    public static extern unsafe IntPtr AllocCString(byte* data, nuint len);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_free_headers")]
    public static extern void FreeHeaders(CHeaders headers);

    // --- Configuration ---

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_get_default_config")]
    public static extern CStreamConfigurationOptions GetDefaultConfig();

    // --- SDK builder ---

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_sdk_builder_new")]
    public static extern IntPtr SdkBuilderNew();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_sdk_builder_endpoint")]
    public static extern void SdkBuilderEndpoint(
        IntPtr builder,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_sdk_builder_unity_catalog_url")]
    public static extern void SdkBuilderUnityCatalogUrl(
        IntPtr builder,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_sdk_builder_sdk_identifier")]
    public static extern void SdkBuilderSdkIdentifier(
        IntPtr builder,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_sdk_builder_application_name")]
    public static extern void SdkBuilderApplicationName(
        IntPtr builder,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_sdk_builder_disable_tls")]
    public static extern void SdkBuilderDisableTls(IntPtr builder);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_sdk_builder_build")]
    public static extern IntPtr SdkBuilderBuild(IntPtr builder, ref CResult result);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "zerobus_sdk_builder_free")]
    public static extern void SdkBuilderFree(IntPtr builder);
}
